# laion-data-explorer

./: .gitignore  LICENSE  README.md  Taskfile.yml
.github/workflows/: pr-checks.yml
backend/: .dev.vars.example  .gitignore  README.md  Taskfile.yaml  download_db.sh  import-to-local-d1.sh  pyproject.toml  wrangler.toml
backend/src/: cache_generator.py  models.py  worker.py
backend/tooling/: ClaudeLabels.md  build_db.py  cache_data_assets.py  compute_visualization.py  embed.py  extract_paper_samples.py  precompute_nearest.py  regenerate_db.sh  schema.py  update_claude_labels.sql  update_data_assets.sh  upload_db_to_cloudflare.sh  upload_nearest_neighbors_to_d1.sh
frontend/: .env.production  .gitignore  .prettierignore  .prettierrc.js  DEPLOYMENT.md  README.md  eslint.config.js  index.html  package.json  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/prompt/: prompt.txt  schema.py
frontend/src/: LaionApp.tsx  index.css  main.tsx  react-plotly.d.ts
frontend/src/components/: ClusterLegend.tsx  ClusterVisualization.tsx  DistributionChart.tsx  ForceDirectedCluster.tsx  LaionHotKeys.tsx  LearnMoreContent.tsx  LearnMoreSheet.tsx  PaperDetail.tsx  PaperSampleViewer.tsx  TemporalHeatmap.tsx  TemporalStackedChart.tsx
frontend/src/lib/: models.ts  ui-client-utils.ts  ui-shared.tsx
frontend/src/state/: chartDataCache.ts
frontend/src/styles/fonts/: inter.css
frontend/src/types/: assets.d.ts  index.ts
frontend/src/ui/: index.tsx
frontend/src/ui/styles/: global.css
frontend/src/utils/: api.ts  layoutTransforms.ts  routeMapping.ts
(+62 files in other folders)
