[project]
name = "laion-api"
version = "1.0.0"
description = "LAION Paper Visualizer API - Python Worker for Cloudflare"
requires-python = ">=3.11"

dependencies = ["fastapi>=0.110.0", "pydantic>=2.6.0", "webtypy>=0.1.7"]

[dependency-groups]
dev = ["ruff>=0.14.1", "workers-py"]

[tool.ruff]
line-length = 200
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
